[package]
name = "cdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["macros"]}
axum-extra = "0.9.3"
tokio = {version = "1.38.0", features = ["full"]}
hyper = { version = "1.3.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json"]}
tracing-appender = "0.2.3"
log = "0.4.21"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
yaml-rust = "0.4.5"
thiserror = "1.0.61"
anyhow = "1.0.86"
validator = {version = "0.18.1", features = ["derive"]}
chrono = "0.4.38"
config = "0.14.0"
r2d2 = "0.8.10"
sea-orm = {version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"]}
redis = {version = "0.25.4", features = ["r2d2", "tokio-comp"]}
